--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="column middle" >
                 <p>Página oficial del Unicaja Baloncesto Málaga, equipo de Baloncesto profesional de la liga ACB</p>  
-                <img src="imagenes/carpena.jpg">
+                <img src="UnicajaMarketing/clasificacion.jpg">
         </div> 
     </div>
     
