--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <div class="header">
-        <img src="UnicajaMarketing/plantilla.jpg">
+        <img src="imagenes/logo.png">
         <h1>Unicaja Baloncesto</h1>
     </div>
 
     <div class="row">
         <div class="column side">
             <a href="#">Inicio</a>
-            <a href="#">Clasificación Liga Endesa</a>
+            <a href="Clasificación.html">Clasificación ACB</a>
             <a href="#">Resultados</a>
             <a href="#">Primer equipo</a>
             <a href="#">Abonados</a>
         </div>
         <div class="column middle" >
                 <p>Página oficial del Unicaja Baloncesto Málaga, equipo de Baloncesto profesional de la liga ACB</p>  
-                <img src="UnicajaMarketing/clasificacion.jpg">
+                <img src="imagenes/carpena.jpg">
         </div> 
     </div>
     
