--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="imagenes/logo.png">
+        <img src="UnicajaMarketing/plantilla.png">
         <h1>Unicaja Baloncesto</h1>
     </div>
 
@@ -21,8 +21,8 @@
             <a href="#">Abonados</a>
         </div>
         <div class="column middle" >
-                <p>Página oficial del Unicaja Baloncesto Málaga, equipo de Baloncesto profesional de la liga ACB</p>  
-                <img src="imagenes/carpena.jpg">
+                <p>Clasificación liga Endesa</p>  
+                <img src="UnicajaMarketing/clasificacion.jpg">
         </div> 
     </div>
     
